--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&family=Inter:wght@300;400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Sup</title>
 </head>
 <body>
     <header class="header">
@@ -42,6 +42,79 @@
             </div>
         </div>
     </header>
+    <main class="main">
+        <section class="information">
+            <div class="container">
+                <div class="information__inner">
+                    <div class="information__top">
+                        <p class="information__top-text information__top-text--one">
+                            After our well received Fly Air Pocket Edition we’re adding the respective touring iSUP
+                            to our Range – the Ray Air Pocket Edition! The ultra travel-friendly touring iSUP is built in a tough but light
+                            construction that allows it to be packed into a backpack half the size of a regular iSUP.
+                            <button class="play-btn information__top-btn">
+                                <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M52.6733 34.5L26.1634 49.6554V19.3446L52.6733 34.5Z" fill="white" />
+                                    <circle cx="35" cy="35" r="34" stroke="white" stroke-width="2" />
+                                </svg>
+                                <span>Play video</span>
+                            </button>
+                        </p>
+                        <p class="information__top-text information__top-text--two">
+                            With a thinner deck pad and tough but flexible construction, the Ray Air Pocket Edition can be rolled and packed into a
+                            much narrower bag, making it extremely easy to store and transport. Based on our highly versatile Ray Air 11’6’’, the
+                            efficient shape is packed with volume - offering safe, stable paddling and superb glide – which makes it the perfect
+                            iSUP for everyone paddling some distance. With its minimal weight and dimensions nothing comes close the convenient
+                            handling of our Pocket Edition iSUPs!
+                        </p>
+                        <img class="information__top-img" src="img/sup.png" alt="">
+                    </div>
+                    <div class="information__bottom">
+                        <h2 class="information__bottom-title">SPECS</h2>
+                        <ul class="information__bottom-list">
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">BOARD</p>
+                                <p class="information__bottom-text">RAY AIR POCKET 11'6"X31"</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">VOLUME</p>
+                                <p class="information__bottom-text">299 L</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">WIDTH</p>
+                                <p class="information__bottom-text">31" / 78.7 CM</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">LENGTH</p>
+                                <p class="information__bottom-text">11'6'' / 350.5 CM</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">THICKNESS</p>
+                                <p class="information__bottom-text">6” / 15 CM</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">WEIGHT</p>
+                                <p class="information__bottom-text">8.5 KG</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">FITTINGS</p>
+                                <p class="information__bottom-text">2X FCS FIN SYSTEM / 2 X 4.5" CLICK FIN
+                                </p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">REC. USER WEIGHT</p>
+                                <p class="information__bottom-text">UP TO 100 KG</p>
+                            </li>
+                            <li class="information__bottom-item">
+                                <p class="information__bottom-caption">MASTFOOT INSERT</p>
+                                <p class="information__bottom-text">NO</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section></section>
+    </main>
 </body>
 <script src="js/app.js"></script>
 </html>
