--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <img class="information__top-img" src="img/sup.png" alt="">
                     </div>
                     <div class="information__bottom">
-                        <h2 class="information__bottom-title">SPECS</h2>
+                        <h3 class="information__bottom-title">SPECS</h3>
                         <ul class="information__bottom-list">
                             <li class="information__bottom-item">
                                 <p class="information__bottom-caption">BOARD</p>
@@ -113,7 +113,53 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <section class="buy">
+            <div class="container">
+                <div class="buy__inner">
+                    <div class="buy__content">
+                        <h3 class="buy__title">RAY AIR POCKET</h3>
+                        <ul class="buy__list">
+                            <li class="buy__item">
+                                <p class="buy__item-title">CLICK FINS</p>
+                                <p class="buy__item-text">
+                                    Comes with two 4.5’’ Click Fins – no tools required – fit and remove in seconds
+                                </p>
+                            </li>
+                            <li class="buy__item">
+                                <p class="buy__item-title">REDUCED DECK PAD</p>
+                                <p class="buy__item-text">
+                                    Reduced area deck pad in standing area to aid packing
+                                </p>
+                            </li>
+                            <li class="buy__item">
+                                <p class="buy__item-title">BACKPACK</p>
+                                <p class="buy__item-text">
+                                    Compact Pocket backpack with easy entry zipper for board, paddle, pump and accessories (fits paddle and also regular
+                                    pump)
+                                </p>
+                            </li>
+                            <li class="buy__item">
+                                <p class="buy__item-title">TOURING SHAPE</p>
+                                <p class="buy__item-text">
+                                    Tried and tested shape based on our popular Ray Air 11’6’’
+                                </p>
+                            </li>
+                            <li class="buy__item">
+                                <p class="buy__item-title">EXTREMELY PORTABLE</p>
+                                <p class="buy__item-text">
+                                    Extremely portable, the ultimate travel companion
+                                </p>
+                            </li>
+                            <div class="buy__price">
+                                590 €
+                            </div>
+                        </ul>
+                        <button class="buy__btn">BUY</button>
+                    </div>
+                    <img src="img/buy-block.png" alt="" class="buy__img">
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 <script src="js/app.js"></script>
