--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <img class="information__top-img" src="img/sup.png" alt="">
                     </div>
                     <div class="information__bottom">
-                        <h3 class="information__bottom-title">SPECS</h3>
+                        <h3 class="information__bottom-title title">SPECS</h3>
                         <ul class="information__bottom-list">
                             <li class="information__bottom-item">
                                 <p class="information__bottom-caption">BOARD</p>
@@ -117,7 +117,7 @@
             <div class="container">
                 <div class="buy__inner">
                     <div class="buy__content">
-                        <h3 class="buy__title">RAY AIR POCKET</h3>
+                        <h3 class="buy__title title">RAY AIR POCKET</h3>
                         <ul class="buy__list">
                             <li class="buy__item">
                                 <p class="buy__item-title">CLICK FINS</p>
@@ -157,6 +157,32 @@
                         <button class="buy__btn">BUY</button>
                     </div>
                     <img src="img/buy-block.png" alt="" class="buy__img">
+                </div>
+            </div>
+        </section>
+
+        <section class="technology">
+            <div class="technology__top">
+                <div class="container">
+                    <div class="technology__top-inner">
+                        <button class="play-btn technology__btn">
+                            <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M52.6733 34.5L26.1634 49.6554V19.3446L52.6733 34.5Z" fill="white" />
+                                <circle cx="35" cy="35" r="34" stroke="white" stroke-width="2" />
+                            </svg>
+                            <span>Play video</span>
+                        </button>
+                        <div class="technology__top-box">
+                            <h3 class="technology__title title">MICRO TECHNOLOGY</h3>
+                            <ol class="technology__list">
+                                <li class="technology__list-item">First PVC rail layer </li>
+                                <li class="technology__list-item">Second PVC rail layer </li>
+                                <li class="technology__list-item">Thin diamond grooving split-pad</li>
+                                <li class="technology__list-item">Strong Tarpaulin layer </li>
+                                <li class="technology__list-item">V-Drop Stitch core</li>
+                            </ol>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
